fix(datatable): fix title truncate

--- a/src/app/components/planner-list/planner-list.component.less
+++ b/src/app/components/planner-list/planner-list.component.less
@@ -199,6 +199,11 @@ button.btn.btn-link.dropdown-toggle:focus {
   outline: none;
 }
 
+.planner-hack-title-truncate {
+  display: inline-grid;
+  margin-left: 4px;
+}
+
 /// ng x-datatables css
 .datatable-header-inner,
 .datatable-row-center,
